@@ -34,6 +34,7 @@ flagsets[fs_OrLs]="-Or -fwfclib=static -g"
 flagsets[fs_OrLi]="-Or -fwfclib=inline -g"
 flagsets[fs_OrLe]="-Or -fwfclib=extern -g"
 flagsets[fs_O2s]="-O2 -s"
+flagsets[fs_O2sp]="-O2 -fpadded_message_size"
 flagsets[fs_Ors]="-Or -s"
 flagsets[fs_Oss]="-Os -s"
 flagsets[fs_O2C]='-O2 -fStringType=C -ftoString=""'
